add_compile_definitions(QTAWSAPPLICATIONDISCOVERYSERVICE_LIBRARY)

add_library(QtAwsApplicationDiscoveryService
  qtawsapplicationdiscoveryserviceglobal.h
  applicationdiscoveryserviceclient.h
  applicationdiscoveryserviceclient_p.h
  applicationdiscoveryservicerequest.h
  applicationdiscoveryservicerequest_p.h
  applicationdiscoveryserviceresponse.h
  applicationdiscoveryserviceresponse_p.h
  associateconfigurationitemstoapplicationrequest.h
  associateconfigurationitemstoapplicationrequest_p.h
  associateconfigurationitemstoapplicationresponse.h
  associateconfigurationitemstoapplicationresponse_p.h
  batchdeleteimportdatarequest.h
  batchdeleteimportdatarequest_p.h
  batchdeleteimportdataresponse.h
  batchdeleteimportdataresponse_p.h
  createapplicationrequest.h
  createapplicationrequest_p.h
  createapplicationresponse.h
  createapplicationresponse_p.h
  createtagsrequest.h
  createtagsrequest_p.h
  createtagsresponse.h
  createtagsresponse_p.h
  deleteapplicationsrequest.h
  deleteapplicationsrequest_p.h
  deleteapplicationsresponse.h
  deleteapplicationsresponse_p.h
  deletetagsrequest.h
  deletetagsrequest_p.h
  deletetagsresponse.h
  deletetagsresponse_p.h
  describeagentsrequest.h
  describeagentsrequest_p.h
  describeagentsresponse.h
  describeagentsresponse_p.h
  describeconfigurationsrequest.h
  describeconfigurationsrequest_p.h
  describeconfigurationsresponse.h
  describeconfigurationsresponse_p.h
  describecontinuousexportsrequest.h
  describecontinuousexportsrequest_p.h
  describecontinuousexportsresponse.h
  describecontinuousexportsresponse_p.h
  describeexportconfigurationsrequest.h
  describeexportconfigurationsrequest_p.h
  describeexportconfigurationsresponse.h
  describeexportconfigurationsresponse_p.h
  describeexporttasksrequest.h
  describeexporttasksrequest_p.h
  describeexporttasksresponse.h
  describeexporttasksresponse_p.h
  describeimporttasksrequest.h
  describeimporttasksrequest_p.h
  describeimporttasksresponse.h
  describeimporttasksresponse_p.h
  describetagsrequest.h
  describetagsrequest_p.h
  describetagsresponse.h
  describetagsresponse_p.h
  disassociateconfigurationitemsfromapplicationrequest.h
  disassociateconfigurationitemsfromapplicationrequest_p.h
  disassociateconfigurationitemsfromapplicationresponse.h
  disassociateconfigurationitemsfromapplicationresponse_p.h
  exportconfigurationsrequest.h
  exportconfigurationsrequest_p.h
  exportconfigurationsresponse.h
  exportconfigurationsresponse_p.h
  getdiscoverysummaryrequest.h
  getdiscoverysummaryrequest_p.h
  getdiscoverysummaryresponse.h
  getdiscoverysummaryresponse_p.h
  listconfigurationsrequest.h
  listconfigurationsrequest_p.h
  listconfigurationsresponse.h
  listconfigurationsresponse_p.h
  listserverneighborsrequest.h
  listserverneighborsrequest_p.h
  listserverneighborsresponse.h
  listserverneighborsresponse_p.h
  startcontinuousexportrequest.h
  startcontinuousexportrequest_p.h
  startcontinuousexportresponse.h
  startcontinuousexportresponse_p.h
  startdatacollectionbyagentidsrequest.h
  startdatacollectionbyagentidsrequest_p.h
  startdatacollectionbyagentidsresponse.h
  startdatacollectionbyagentidsresponse_p.h
  startexporttaskrequest.h
  startexporttaskrequest_p.h
  startexporttaskresponse.h
  startexporttaskresponse_p.h
  startimporttaskrequest.h
  startimporttaskrequest_p.h
  startimporttaskresponse.h
  startimporttaskresponse_p.h
  stopcontinuousexportrequest.h
  stopcontinuousexportrequest_p.h
  stopcontinuousexportresponse.h
  stopcontinuousexportresponse_p.h
  stopdatacollectionbyagentidsrequest.h
  stopdatacollectionbyagentidsrequest_p.h
  stopdatacollectionbyagentidsresponse.h
  stopdatacollectionbyagentidsresponse_p.h
  updateapplicationrequest.h
  updateapplicationrequest_p.h
  updateapplicationresponse.h
  updateapplicationresponse_p.h
  applicationdiscoveryserviceclient.cpp
  applicationdiscoveryservicerequest.cpp
  applicationdiscoveryserviceresponse.cpp
  associateconfigurationitemstoapplicationrequest.cpp
  associateconfigurationitemstoapplicationresponse.cpp
  batchdeleteimportdatarequest.cpp
  batchdeleteimportdataresponse.cpp
  createapplicationrequest.cpp
  createapplicationresponse.cpp
  createtagsrequest.cpp
  createtagsresponse.cpp
  deleteapplicationsrequest.cpp
  deleteapplicationsresponse.cpp
  deletetagsrequest.cpp
  deletetagsresponse.cpp
  describeagentsrequest.cpp
  describeagentsresponse.cpp
  describeconfigurationsrequest.cpp
  describeconfigurationsresponse.cpp
  describecontinuousexportsrequest.cpp
  describecontinuousexportsresponse.cpp
  describeexportconfigurationsrequest.cpp
  describeexportconfigurationsresponse.cpp
  describeexporttasksrequest.cpp
  describeexporttasksresponse.cpp
  describeimporttasksrequest.cpp
  describeimporttasksresponse.cpp
  describetagsrequest.cpp
  describetagsresponse.cpp
  disassociateconfigurationitemsfromapplicationrequest.cpp
  disassociateconfigurationitemsfromapplicationresponse.cpp
  exportconfigurationsrequest.cpp
  exportconfigurationsresponse.cpp
  getdiscoverysummaryrequest.cpp
  getdiscoverysummaryresponse.cpp
  listconfigurationsrequest.cpp
  listconfigurationsresponse.cpp
  listserverneighborsrequest.cpp
  listserverneighborsresponse.cpp
  startcontinuousexportrequest.cpp
  startcontinuousexportresponse.cpp
  startdatacollectionbyagentidsrequest.cpp
  startdatacollectionbyagentidsresponse.cpp
  startexporttaskrequest.cpp
  startexporttaskresponse.cpp
  startimporttaskrequest.cpp
  startimporttaskresponse.cpp
  stopcontinuousexportrequest.cpp
  stopcontinuousexportresponse.cpp
  stopdatacollectionbyagentidsrequest.cpp
  stopdatacollectionbyagentidsresponse.cpp
  updateapplicationrequest.cpp
  updateapplicationresponse.cpp)

target_link_libraries(QtAwsApplicationDiscoveryService
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
