set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

add_library(QtAwsAppMesh
  appmeshclient.h
  appmeshclient_p.h
  appmeshrequest.h
  appmeshrequest_p.h
  appmeshresponse.h
  appmeshresponse_p.h
  creategatewayrouterequest.h
  creategatewayrouterequest_p.h
  creategatewayrouteresponse.h
  creategatewayrouteresponse_p.h
  createmeshrequest.h
  createmeshrequest_p.h
  createmeshresponse.h
  createmeshresponse_p.h
  createrouterequest.h
  createrouterequest_p.h
  createrouteresponse.h
  createrouteresponse_p.h
  createvirtualgatewayrequest.h
  createvirtualgatewayrequest_p.h
  createvirtualgatewayresponse.h
  createvirtualgatewayresponse_p.h
  createvirtualnoderequest.h
  createvirtualnoderequest_p.h
  createvirtualnoderesponse.h
  createvirtualnoderesponse_p.h
  createvirtualrouterrequest.h
  createvirtualrouterrequest_p.h
  createvirtualrouterresponse.h
  createvirtualrouterresponse_p.h
  createvirtualservicerequest.h
  createvirtualservicerequest_p.h
  createvirtualserviceresponse.h
  createvirtualserviceresponse_p.h
  deletegatewayrouterequest.h
  deletegatewayrouterequest_p.h
  deletegatewayrouteresponse.h
  deletegatewayrouteresponse_p.h
  deletemeshrequest.h
  deletemeshrequest_p.h
  deletemeshresponse.h
  deletemeshresponse_p.h
  deleterouterequest.h
  deleterouterequest_p.h
  deleterouteresponse.h
  deleterouteresponse_p.h
  deletevirtualgatewayrequest.h
  deletevirtualgatewayrequest_p.h
  deletevirtualgatewayresponse.h
  deletevirtualgatewayresponse_p.h
  deletevirtualnoderequest.h
  deletevirtualnoderequest_p.h
  deletevirtualnoderesponse.h
  deletevirtualnoderesponse_p.h
  deletevirtualrouterrequest.h
  deletevirtualrouterrequest_p.h
  deletevirtualrouterresponse.h
  deletevirtualrouterresponse_p.h
  deletevirtualservicerequest.h
  deletevirtualservicerequest_p.h
  deletevirtualserviceresponse.h
  deletevirtualserviceresponse_p.h
  describegatewayrouterequest.h
  describegatewayrouterequest_p.h
  describegatewayrouteresponse.h
  describegatewayrouteresponse_p.h
  describemeshrequest.h
  describemeshrequest_p.h
  describemeshresponse.h
  describemeshresponse_p.h
  describerouterequest.h
  describerouterequest_p.h
  describerouteresponse.h
  describerouteresponse_p.h
  describevirtualgatewayrequest.h
  describevirtualgatewayrequest_p.h
  describevirtualgatewayresponse.h
  describevirtualgatewayresponse_p.h
  describevirtualnoderequest.h
  describevirtualnoderequest_p.h
  describevirtualnoderesponse.h
  describevirtualnoderesponse_p.h
  describevirtualrouterrequest.h
  describevirtualrouterrequest_p.h
  describevirtualrouterresponse.h
  describevirtualrouterresponse_p.h
  describevirtualservicerequest.h
  describevirtualservicerequest_p.h
  describevirtualserviceresponse.h
  describevirtualserviceresponse_p.h
  listgatewayroutesrequest.h
  listgatewayroutesrequest_p.h
  listgatewayroutesresponse.h
  listgatewayroutesresponse_p.h
  listmeshesrequest.h
  listmeshesrequest_p.h
  listmeshesresponse.h
  listmeshesresponse_p.h
  listroutesrequest.h
  listroutesrequest_p.h
  listroutesresponse.h
  listroutesresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  listvirtualgatewaysrequest.h
  listvirtualgatewaysrequest_p.h
  listvirtualgatewaysresponse.h
  listvirtualgatewaysresponse_p.h
  listvirtualnodesrequest.h
  listvirtualnodesrequest_p.h
  listvirtualnodesresponse.h
  listvirtualnodesresponse_p.h
  listvirtualroutersrequest.h
  listvirtualroutersrequest_p.h
  listvirtualroutersresponse.h
  listvirtualroutersresponse_p.h
  listvirtualservicesrequest.h
  listvirtualservicesrequest_p.h
  listvirtualservicesresponse.h
  listvirtualservicesresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updategatewayrouterequest.h
  updategatewayrouterequest_p.h
  updategatewayrouteresponse.h
  updategatewayrouteresponse_p.h
  updatemeshrequest.h
  updatemeshrequest_p.h
  updatemeshresponse.h
  updatemeshresponse_p.h
  updaterouterequest.h
  updaterouterequest_p.h
  updaterouteresponse.h
  updaterouteresponse_p.h
  updatevirtualgatewayrequest.h
  updatevirtualgatewayrequest_p.h
  updatevirtualgatewayresponse.h
  updatevirtualgatewayresponse_p.h
  updatevirtualnoderequest.h
  updatevirtualnoderequest_p.h
  updatevirtualnoderesponse.h
  updatevirtualnoderesponse_p.h
  updatevirtualrouterrequest.h
  updatevirtualrouterrequest_p.h
  updatevirtualrouterresponse.h
  updatevirtualrouterresponse_p.h
  updatevirtualservicerequest.h
  updatevirtualservicerequest_p.h
  updatevirtualserviceresponse.h
  updatevirtualserviceresponse_p.h
  appmeshclient.cpp
  appmeshrequest.cpp
  appmeshresponse.cpp
  creategatewayrouterequest.cpp
  creategatewayrouteresponse.cpp
  createmeshrequest.cpp
  createmeshresponse.cpp
  createrouterequest.cpp
  createrouteresponse.cpp
  createvirtualgatewayrequest.cpp
  createvirtualgatewayresponse.cpp
  createvirtualnoderequest.cpp
  createvirtualnoderesponse.cpp
  createvirtualrouterrequest.cpp
  createvirtualrouterresponse.cpp
  createvirtualservicerequest.cpp
  createvirtualserviceresponse.cpp
  deletegatewayrouterequest.cpp
  deletegatewayrouteresponse.cpp
  deletemeshrequest.cpp
  deletemeshresponse.cpp
  deleterouterequest.cpp
  deleterouteresponse.cpp
  deletevirtualgatewayrequest.cpp
  deletevirtualgatewayresponse.cpp
  deletevirtualnoderequest.cpp
  deletevirtualnoderesponse.cpp
  deletevirtualrouterrequest.cpp
  deletevirtualrouterresponse.cpp
  deletevirtualservicerequest.cpp
  deletevirtualserviceresponse.cpp
  describegatewayrouterequest.cpp
  describegatewayrouteresponse.cpp
  describemeshrequest.cpp
  describemeshresponse.cpp
  describerouterequest.cpp
  describerouteresponse.cpp
  describevirtualgatewayrequest.cpp
  describevirtualgatewayresponse.cpp
  describevirtualnoderequest.cpp
  describevirtualnoderesponse.cpp
  describevirtualrouterrequest.cpp
  describevirtualrouterresponse.cpp
  describevirtualservicerequest.cpp
  describevirtualserviceresponse.cpp
  listgatewayroutesrequest.cpp
  listgatewayroutesresponse.cpp
  listmeshesrequest.cpp
  listmeshesresponse.cpp
  listroutesrequest.cpp
  listroutesresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  listvirtualgatewaysrequest.cpp
  listvirtualgatewaysresponse.cpp
  listvirtualnodesrequest.cpp
  listvirtualnodesresponse.cpp
  listvirtualroutersrequest.cpp
  listvirtualroutersresponse.cpp
  listvirtualservicesrequest.cpp
  listvirtualservicesresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updategatewayrouterequest.cpp
  updategatewayrouteresponse.cpp
  updatemeshrequest.cpp
  updatemeshresponse.cpp
  updaterouterequest.cpp
  updaterouteresponse.cpp
  updatevirtualgatewayrequest.cpp
  updatevirtualgatewayresponse.cpp
  updatevirtualnoderequest.cpp
  updatevirtualnoderesponse.cpp
  updatevirtualrouterrequest.cpp
  updatevirtualrouterresponse.cpp
  updatevirtualservicerequest.cpp
  updatevirtualserviceresponse.cpp)

add_dependencies(QtAwsAppMesh QtAwsCore)

target_link_libraries(QtAwsAppMesh
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
