add_library(QtAwsAppRegistry
  appregistryclient.h
  appregistryclient_p.h
  appregistryrequest.h
  appregistryrequest_p.h
  appregistryresponse.h
  appregistryresponse_p.h
  associateattributegrouprequest.h
  associateattributegrouprequest_p.h
  associateattributegroupresponse.h
  associateattributegroupresponse_p.h
  associateresourcerequest.h
  associateresourcerequest_p.h
  associateresourceresponse.h
  associateresourceresponse_p.h
  createapplicationrequest.h
  createapplicationrequest_p.h
  createapplicationresponse.h
  createapplicationresponse_p.h
  createattributegrouprequest.h
  createattributegrouprequest_p.h
  createattributegroupresponse.h
  createattributegroupresponse_p.h
  deleteapplicationrequest.h
  deleteapplicationrequest_p.h
  deleteapplicationresponse.h
  deleteapplicationresponse_p.h
  deleteattributegrouprequest.h
  deleteattributegrouprequest_p.h
  deleteattributegroupresponse.h
  deleteattributegroupresponse_p.h
  disassociateattributegrouprequest.h
  disassociateattributegrouprequest_p.h
  disassociateattributegroupresponse.h
  disassociateattributegroupresponse_p.h
  disassociateresourcerequest.h
  disassociateresourcerequest_p.h
  disassociateresourceresponse.h
  disassociateresourceresponse_p.h
  getapplicationrequest.h
  getapplicationrequest_p.h
  getapplicationresponse.h
  getapplicationresponse_p.h
  getattributegrouprequest.h
  getattributegrouprequest_p.h
  getattributegroupresponse.h
  getattributegroupresponse_p.h
  listapplicationsrequest.h
  listapplicationsrequest_p.h
  listapplicationsresponse.h
  listapplicationsresponse_p.h
  listassociatedattributegroupsrequest.h
  listassociatedattributegroupsrequest_p.h
  listassociatedattributegroupsresponse.h
  listassociatedattributegroupsresponse_p.h
  listassociatedresourcesrequest.h
  listassociatedresourcesrequest_p.h
  listassociatedresourcesresponse.h
  listassociatedresourcesresponse_p.h
  listattributegroupsrequest.h
  listattributegroupsrequest_p.h
  listattributegroupsresponse.h
  listattributegroupsresponse_p.h
  listtagsforresourcerequest.h
  listtagsforresourcerequest_p.h
  listtagsforresourceresponse.h
  listtagsforresourceresponse_p.h
  syncresourcerequest.h
  syncresourcerequest_p.h
  syncresourceresponse.h
  syncresourceresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateapplicationrequest.h
  updateapplicationrequest_p.h
  updateapplicationresponse.h
  updateapplicationresponse_p.h
  updateattributegrouprequest.h
  updateattributegrouprequest_p.h
  updateattributegroupresponse.h
  updateattributegroupresponse_p.h
  appregistryclient.cpp
  appregistryrequest.cpp
  appregistryresponse.cpp
  associateattributegrouprequest.cpp
  associateattributegroupresponse.cpp
  associateresourcerequest.cpp
  associateresourceresponse.cpp
  createapplicationrequest.cpp
  createapplicationresponse.cpp
  createattributegrouprequest.cpp
  createattributegroupresponse.cpp
  deleteapplicationrequest.cpp
  deleteapplicationresponse.cpp
  deleteattributegrouprequest.cpp
  deleteattributegroupresponse.cpp
  disassociateattributegrouprequest.cpp
  disassociateattributegroupresponse.cpp
  disassociateresourcerequest.cpp
  disassociateresourceresponse.cpp
  getapplicationrequest.cpp
  getapplicationresponse.cpp
  getattributegrouprequest.cpp
  getattributegroupresponse.cpp
  listapplicationsrequest.cpp
  listapplicationsresponse.cpp
  listassociatedattributegroupsrequest.cpp
  listassociatedattributegroupsresponse.cpp
  listassociatedresourcesrequest.cpp
  listassociatedresourcesresponse.cpp
  listattributegroupsrequest.cpp
  listattributegroupsresponse.cpp
  listtagsforresourcerequest.cpp
  listtagsforresourceresponse.cpp
  syncresourcerequest.cpp
  syncresourceresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateapplicationrequest.cpp
  updateapplicationresponse.cpp
  updateattributegrouprequest.cpp
  updateattributegroupresponse.cpp)

add_dependencies(QtAwsAppRegistry QtAwsCore)

target_link_libraries(QtAwsAppRegistry
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
